--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -241,3 +241,29 @@ nav .logo img{
         right: 0em;
     }
 }
+
+/* ADAPTIVE */
+
+@media only screen and (max-width: 1268px) {
+    .grid-cols-4{
+        grid-template-columns: repeat(3, 272px);;
+    }
+}
+
+@media only screen and (max-width: 940px) {
+    .grid-cols-4{
+        grid-template-columns: repeat(2, 272px);;
+    }
+}
+
+@media only screen and (max-width: 614px) {
+    .grid-cols-4{
+        grid-template-columns: repeat(1, 272px);;
+    }
+}
+
+@media only screen and (max-width: 894px) {
+    #head img{
+        display: none;
+    }
+}
